force-app/main/default/objects/CBK_AuditLog__c/CBK_AuditLog__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado donde se almacenará la información de los registros de auditoría</description>
    <label>Registro Auditoria</label>
    <nameField>
        <displayFormat>AL-{000000000}</displayFormat>
        <label>Registro Auditoria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registros Auditoria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>