force-app/main/default/objects/CBK_AuditLog__c/fields/CBK_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>CBK_Aplicacion__c</fullName>
    <description>Aplicación desde que se invoca la funcionalidad auditada</description>
    <label>Aplicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CaixaBank_OPS</fullName>
                <label>CaixaBank OPS</label>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>EV_Gestor_de_eventos</fullName>
                <label>Gestor de eventos</label>
            </value>
            <value>
                <fullName>CSBD_App</fullName>
                <label>Centro 4223</label>
            </value>
            <value>
                <fullName>AV_CRM_Intouch</fullName>
                <label>CRM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>