force-app/main/default/objects/CBK_AuditLog__c/fields/CBK_FechaHoraAuditoria__c.field-meta.xml
<CustomField>
    <fullName>CBK_FechaHoraAuditoria__c</fullName>
    <description>Fecha/Hora en la que se produjo la operación auditada</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha/Hora Auditoría</label>
    <type>DateTime</type>
</CustomField>