force-app/main/default/objects/CBK_AuditLog__c/fields/CBK_Operacion__c.field-meta.xml
<CustomField>
    <fullName>CBK_Operacion__c</fullName>
    <description>Identificador del tipo de operación auditada (C,R,U,D)</description>
    <label>Operación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Creación</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Lectura</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Actualización</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Borrado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>