force-app/main/default/objects/CBK_AuditLog__c/fields/CBK_RegistroAccount__c.field-meta.xml
<CustomField>
    <fullName>CBK_RegistroAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identificador de la cuenta sobre la  que tuvo lugar la operación auditada. Campo solamente informado en caso de que el tipo de objeto del registro sea Account. Si la cuenta relacionada es eliminada, se mantendrá el registro de auditoría pero se borrará el valor de este campo.</description>
    <label>Cuenta Registro</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registros Auditoria</relationshipLabel>
    <relationshipName>Registros_Auditoria</relationshipName>
    <type>Lookup</type>
</CustomField>