force-app/main/default/objects/CBK_AuditLog__c/fields/CBK_RegistroEsCuenta__c.field-meta.xml
<CustomField>
    <fullName>CBK_RegistroEsCuenta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo booleano que indica si el objeto relacionado es de tipo cuenta.</description>
    <label>Es Cuenta</label>
    <type>Checkbox</type>
</CustomField>