force-app/main/default/objects/CBK_AuditLog__c/fields/CBK_RegistroId__c.field-meta.xml
<CustomField>
    <fullName>CBK_RegistroId__c</fullName>
    <description>Identificador Salesforce del registro sobre el que se ha realizado la operación auditada</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Identificador Registro</label>
    <length>18</length>
    <type>Text</type>
</CustomField>