force-app/main/default/objects/CBK_AuditLog__c/fields/CBK_RegistroTipoObjeto__c.field-meta.xml
<CustomField>
    <fullName>CBK_RegistroTipoObjeto__c</fullName>
    <description>Texto con el tipo de objeto auditado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo Objeto Registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>