force-app/main/default/objects/CBK_AuditLog__c/fields/CBK_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CBK_Tipo__c</fullName>
    <description>Tipo de funcionalidad/actividad auditada</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ConsultaSaldo</fullName>
                <label>Consulta Saldo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>