force-app/main/default/objects/CBK_AuditLog__c/fields/CBK_UsuarioAuditoria__c.field-meta.xml
<CustomField>
    <fullName>CBK_UsuarioAuditoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario que llevó a cabo la operación auditada.</description>
    <label>Usuario Auditoría</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Registros_Auditoria</relationshipName>
    <type>Lookup</type>
</CustomField>