force-app/main/default/objects/CBK_AuditLog__c/fields/CBK_UsuarioAuditoriaEmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>CBK_UsuarioAuditoriaEmployeeNumber__c</fullName>
    <description>Numero de empleado del usuario que llevó a cabo la operación auditada.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Usuario Auditoría Num. Empleado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>