force-app/main/default/objects/CBK_AuditLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CBK_Aplicacion__c</columns>
    <columns>CBK_Tipo__c</columns>
    <columns>CBK_Operacion__c</columns>
    <columns>NAME</columns>
    <columns>CBK_RegistroId__c</columns>
    <columns>CBK_RegistroName__c</columns>
    <columns>CBK_RegistroEsCuenta__c</columns>
    <columns>CBK_RegistroAccount__c</columns>
    <columns>CBK_FechaHoraAuditoria__c</columns>
    <columns>CBK_RegistroTipoObjeto__c</columns>
    <columns>CBK_UsuarioAuditoria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>